# neomind-apex-ingestion

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/db/: schema_v1.sql
src/app/: main.py
src/app/integrations/: __init__.py  base.py  google.py  microsoft.py
